@startuml ERDiagram

' hide the spot
hide circle
' left to right direction

skinparam linetype ortho

entity "users" as u1 {
  '* identifying_atrribute
  * id : string <<generated>> <<PK>>
  --
  * name : string
  * email : string
  * birth_data : date
  * role : roles
  * password : string <<generated>>
  * phone: string
    cni : string
    nif : string
  * created_at : timestamp
  * updated_at : timestamp
}


entity "refresh_token" as token {
  id : string <<PK>>
  expiresIn : integer
  userId: string
}

entity "clients" as c1 {
  * id : String <<generated>> <<PK>>
  --
  * user_id : string <<FK>>
}

entity "training_plans" as t1 {
  * id : string <<generated>> <<PK>>
  --
  * name : string
    description : string
  * value : float
  * create_at : timestamp
  * updated_at : timestamp
}

entity "discounts" as d1 {
  * id : string <<generated>> <<PK>>
  --
  * name : string
    description: string
  * value : float
  * created_at : timestamp
  * updated_at : timestamp
}

entity "personal_trainers" as pt {
  * id : string <<generated>> <<PK>>
  --
  * user_id : string <<FK>>
  * value : float
  * created_at : timestamp
  * updated_at : timestamp
}

entity "employees" as e1 {
  * id : string <<generated>> <<PK>>
  --
  * user_id : string <<FK>>
  * create_at : timestamp
  * updated_at : timestamp

}

entity "manager" as m1 {
  * id : string <<generated>> <<PK>>
  --
  * user_id : string <<FK>>
  * create_at : timestamp
  * updated_at : timestamp
}


entity "Payment" as pay {
  * id : string <<generated>>
  --
  * client_id : string <<FK>>
  training_plan_name : string
  training_plan_value : float
  discount_name : string
  discount_value: float
  personal_trainer_name : string
  personal_trainer_value: float
  * create_at: timestamp
  * updated_at: timestamp
}

entity "client_personal_trainer" as cpt{
  * client_id : string <<FK>>
  * personal_trainer_id : string <<FK>>
}

entity "client_training_plan" as ctp {
  * client_id : string <<FK>>
  * training_plan_id : string <<FK>>
}

entity "client_discount" as cd {
  * client_id : string <<FK>>
  * discount_id : string <<FK>>
}


u1 }|--|| c1
u1 }|--|| m1
u1 }|--|| e1
u1 }|--|| pt
u1 |o--o| token



d1 ||--|| cd
t1 ||--|| ctp


c1 ||--o{ cpt
c1 ||--o{ cd
c1 ||--o{ ctp
c1 ||--o{ pay


@enduml